--- a/09_相关片段提取.ipynb
+++ b/09_相关片段提取.ipynb
@@ -9,12 +9,15 @@
    },
    "source": [
     "# Relevant Segment Extraction (RSE) for Enhanced RAG\n",
+    "# 相关段落提取（RSE）以增强RAG\n",
     "\n",
-    "In this notebook, we implement a Relevant Segment Extraction (RSE) technique to improve the context quality in our RAG system. Rather than simply retrieving a collection of isolated chunks, we identify and reconstruct continuous segments of text that provide better context to our language model.\n",
+    "In this notebook, we implement a Relevant Segment Extraction (RSE) technique to improve the context quality in our RAG system. Rather than simply retrieving a collection of isolated chunks, we identify and reconstruct continuous segments of text that provide better context to our language model.  \n",
+    "在本笔记本中，我们实现了一种相关段落提取（RSE）技术，以提高我们RAG系统中的上下文质量。我们不是简单地检索一组孤立的块，而是识别并重建提供更好上下文的连续文本段落。\n",
     "\n",
     "## Key Concept\n",
-    "\n",
-    "Relevant chunks tend to be clustered together within documents. By identifying these clusters and preserving their continuity, we provide more coherent context for the LLM to work with."
+    "# 关键概念\n",
+    "Relevant chunks tend to be clustered together within documents. By identifying these clusters and preserving their continuity, we provide more coherent context for the LLM to work with.  \n",
+    "相关块往往在文档中聚集在一起。通过识别这些集群并保留其连续性，我们为LLM提供了更加连贯的上下文。"
    ]
   },
   {
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(texts, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(texts, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Generate embeddings for texts.\n",
     "    \n",
@@ -526,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_response(query, context, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(query, context, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generate a response based on the query and context.\n",
     "    \n",
@@ -759,7 +762,7 @@
     "        \n",
     "        # Generate the evaluation using the specified model\n",
     "        evaluation = client.chat.completions.create(\n",
-    "            model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "            model=\"deepseek-ai/DeepSeek-V3\",\n",
     "            messages=[\n",
     "                {\"role\": \"system\", \"content\": \"You are an objective evaluator of RAG system responses.\"},\n",
     "                {\"role\": \"user\", \"content\": evaluation_prompt}\n",
@@ -799,23 +802,39 @@
       "\n",
       "Calculating relevance scores and chunk values...\n",
       "Finding optimal continuous text segments...\n",
-      "Found segment (21, 41) with score 9.0718\n",
-      "Found segment (0, 20) with score 8.8685\n",
+      "Found segment (0, 20) with score 4.1730\n",
+      "Found segment (22, 42) with score 3.9344\n",
       "\n",
       "Reconstructing text segments from chunks...\n",
       "Generating response using relevant segments as context...\n",
       "\n",
       "=== FINAL RESPONSE ===\n",
-      "Based on the context provided, Explainable AI (XAI) refers to the development of techniques that make AI systems more transparent and understandable. The goal of XAI is to provide insights into how AI models make decisions, enhancing trust and accountability in AI systems.\n",
+      "**Explainable AI (XAI)** refers to artificial intelligence systems designed to be transparent and understandable in their decision-making processes. Unlike traditional \"black box\" AI models, which provide outputs without clear reasoning, XAI aims to make AI decisions interpretable to humans by revealing the underlying logic, data, and factors influencing those decisions.\n",
       "\n",
-      "XAI is considered important for several reasons:\n",
+      "### **Why is Explainable AI Important?**  \n",
+      "1. **Trust and Accountability**:  \n",
+      "   - XAI helps users (e.g., doctors, policymakers, or consumers) trust AI systems by clarifying how decisions are made. This is critical in high-stakes domains like healthcare, finance, and criminal justice.  \n",
       "\n",
-      "1. **Building trust**: XAI helps users understand how AI systems arrive at their decisions, which is essential for building trust in AI. When users can see how AI systems work, they are more likely to accept the results.\n",
-      "2. **Addressing bias**: XAI can help identify biases in AI systems by providing insights into how they make decisions. By understanding how AI systems work, developers can identify and address biases in the data they are trained on.\n",
-      "3. **Improving accountability**: XAI enables developers to take responsibility for the decisions made by AI systems. By providing explanations for AI decisions, developers can be held accountable for any errors or biases in the system.\n",
-      "4. **Enhancing transparency**: XAI provides insights into how AI systems work, which is essential for transparency in AI decision-making. This is particularly important in high-stakes applications, such as healthcare or finance, where users need to understand how AI systems arrive at their decisions.\n",
+      "2. **Bias and Fairness**:  \n",
+      "   - AI can inherit biases from training data, leading to discriminatory outcomes. XAI techniques help identify and mitigate these biases by exposing the reasoning behind AI decisions.  \n",
       "\n",
-      "Overall, XAI is considered important because it addresses the need for transparency, accountability, and trust in AI systems. By providing insights into how AI models make decisions, XAI can help build trust, address bias, and improve accountability in AI development and deployment.\n",
+      "3. **Regulatory and Ethical Compliance**:  \n",
+      "   - Laws like the EU’s General Data Protection Regulation (GDPR) require explanations for automated decisions affecting individuals. XAI ensures compliance with such regulations.  \n",
+      "\n",
+      "4. **Debugging and Improvement**:  \n",
+      "   - Transparency allows developers to diagnose errors, refine models, and improve performance.  \n",
+      "\n",
+      "5. **Human-AI Collaboration**:  \n",
+      "   - In fields like medicine or autonomous driving, humans need to understand AI recommendations to make informed choices. XAI bridges this gap.  \n",
+      "\n",
+      "### **Examples from Context**:  \n",
+      "- **Healthcare**: An XAI system diagnosing diseases can show which symptoms or scan features led to its conclusion, helping doctors verify its accuracy.  \n",
+      "- **Finance**: Loan approval algorithms using XAI can explain why an application was rejected, ensuring fairness.  \n",
+      "\n",
+      "### **Future Trends**:  \n",
+      "The context highlights XAI as a growing focus in AI research, with techniques like interpretable neural networks and decision trees being developed to enhance transparency.  \n",
+      "\n",
+      "In summary, Explainable AI is vital for ethical, practical, and legal reasons, ensuring AI systems are not only powerful but also understandable and accountable.\n",
       "\n",
       "=== STARTING STANDARD TOP-K RETRIEVAL ===\n",
       "Query: What is 'Explainable AI' and why is it considered important?\n",
@@ -827,35 +846,75 @@
       "Generating response using relevant segments as context...\n",
       "\n",
       "=== FINAL RESPONSE ===\n",
-      "Based on the provided context, Explainable AI (XAI) is a technique that aims to make AI decisions more understandable, enabling users to assess their fairness and accuracy. XAI techniques are designed to provide insights into how AI systems arrive at their decisions, enhancing transparency and explainability.\n",
+      "**Explainable AI (XAI)** refers to techniques and methods aimed at making the decision-making processes of artificial intelligence systems more transparent and understandable to humans. The goal is to provide insights into how AI models arrive at their decisions, ensuring that their outputs can be interpreted, assessed, and trusted by users.\n",
       "\n",
-      "XAI is considered important for several reasons:\n",
+      "### Importance of Explainable AI:\n",
+      "1. **Trust and Accountability**:  \n",
+      "   - XAI helps build trust in AI systems by allowing users to understand and verify the reasoning behind decisions (Chunks 1, 3, 4, 9).  \n",
+      "   - It ensures accountability by clarifying who or what is responsible for AI-driven outcomes (Chunks 1, 2, 4).  \n",
       "\n",
-      "1. **Building trust in AI**: By making AI decisions more understandable, XAI helps build trust in AI systems, which is essential for their widespread adoption.\n",
-      "2. **Addressing potential harms**: XAI can help identify potential biases and errors in AI decision-making, allowing for more effective mitigation and prevention of harms.\n",
-      "3. **Ensuring accountability**: XAI provides a way to establish accountability for AI decisions, which is crucial for addressing potential consequences and ensuring ethical behavior.\n",
-      "4. **Improving fairness and accuracy**: By providing insights into AI decision-making, XAI can help identify and address biases and errors, leading to more fair and accurate outcomes.\n",
+      "2. **Fairness and Bias Mitigation**:  \n",
+      "   - Transparent AI systems enable the detection and correction of biases in data or algorithms, preventing discriminatory or unfair outcomes (Chunks 5, 9).  \n",
       "\n",
-      "Overall, Explainable AI is a critical aspect of developing trustworthy, fair, and accurate AI systems, and its importance will only continue to grow as AI becomes increasingly pervasive in various domains.\n",
+      "3. **Regulatory and Ethical Compliance**:  \n",
+      "   - Many industries and regulations (e.g., GDPR) require explanations for automated decisions, especially in high-stakes domains like healthcare or finance (Chunks 1, 9).  \n",
+      "\n",
+      "4. **User Empowerment**:  \n",
+      "   - XAI gives users control and agency by helping them understand how AI interacts with their data or influences decisions (Chunks 8, 9).  \n",
+      "\n",
+      "5. **Robustness and Safety**:  \n",
+      "   - Understanding AI decisions allows developers to identify vulnerabilities, improve reliability, and prevent unintended consequences (Chunks 6, 8).  \n",
+      "\n",
+      "### Examples of XAI Techniques:  \n",
+      "- Methods like feature importance, decision trees, or natural language explanations that \"open the black box\" of complex models like deep learning (Chunks 2, 3, 4).  \n",
+      "\n",
+      "In summary, Explainable AI bridges the gap between AI's complexity and human interpretability, addressing ethical, societal, and practical challenges to ensure AI is used responsibly and effectively.  \n",
+      "\n",
+      "*(Sources: Chunks 1, 2, 3, 4, 5, 6, 8, 9)*\n",
       "\n",
       "=== COMPARING RESULTS ===\n",
       "Evaluating responses against reference answer...\n",
       "\n",
       "=== EVALUATION RESULTS ===\n",
-      "Based on the comparison, I would conclude that:\n",
+      "### Comparison of Responses Against the Reference Answer\n",
       "\n",
-      "1. **The Response from Standard Retrieval is more accurate and comprehensive:**\n",
-      "   The Response from Standard Retrieval provides a clear definition of Explainable AI (XAI) and its importance. It explains the goals of XAI, its key aspects (transparency and understandability), and its benefits. The explanation highlights the reasons why XAI is considered important, which includes building trust, addressing potential harms, ensuring accountability, and improving fairness and accuracy.\n",
+      "#### 1. **More Accurate and Comprehensive**  \n",
+      "   - **Standard Retrieval**:  \n",
+      "     - **Accuracy**: High, as it aligns well with the reference answer and provides detailed explanations.  \n",
+      "     - **Comprehensiveness**: Very comprehensive, covering trust, fairness, regulation, user empowerment, and robustness with specific techniques and sources.  \n",
+      "   - **Relevant Segment Extraction**:  \n",
+      "     - **Accuracy**: High, but slightly less detailed than Standard Retrieval (e.g., lacks explicit mention of \"user empowerment\" or \"safety\").  \n",
+      "     - **Comprehensiveness**: Good, but missing some nuances like robustness and safety. Includes practical examples, which add value but don’t fully compensate for omitted points.  \n",
       "\n",
-      "   On the other hand, the Response from Relevant Segment Extraction provides a simplified explanation of XAI but focuses more on the aspects of trust, bias, accountability, and transparency. While it does provide a clear overview of XAI, it is more concise and somewhat less detailed than the Response from Standard Retrieval.\n",
+      "   **Winner**: **Standard Retrieval** for being more exhaustive and structured.  \n",
       "\n",
-      "2. **The Response from Relevant Segment Extraction is better at addressing the user's query:**\n",
-      "   The Response from Standard Retrieval not only answers the question but also provides additional context and importance. The Response from Relevant Segment Extraction, however, more closely addresses the original question by focusing on the core aspects of XAI and its advantages.\n",
+      "#### 2. **Better at Addressing the User's Query**  \n",
+      "   - **Standard Retrieval**:  \n",
+      "     - Directly addresses \"what is XAI\" and \"why it’s important\" with a clear breakdown of key themes (trust, fairness, etc.).  \n",
+      "     - Uses bullet points for clarity and cites specific chunks, enhancing credibility.  \n",
+      "   - **Relevant Segment Extraction**:  \n",
+      "     - Also answers the query well but is slightly less organized (e.g., mixes importance with examples under \"Why is XAI Important?\").  \n",
+      "     - Focuses more on domain-specific examples (healthcare, finance), which, while useful, distract slightly from the core question.  \n",
       "\n",
-      "3. **The Response from Standard Retrieval is less likely to include irrelevant information:**\n",
-      "   This response is less likely to contain unnecessary details. The Response from Standard Retrieval provides a clear and concise answer with a clear structure, focusing on the key points of XAI and its importance. In contrast, the Response from Relevant Segment Extraction might include some details about AI systems, updates, or other related information that is not essential to answering the original question.\n",
+      "   **Winner**: **Standard Retrieval** for better organization and direct focus on the query.  \n",
       "\n",
-      "However, the Response from Standard Retrieval includes a more relevant and comprehensive discussion of the reference answer's points, than the Response from Relevant Segment Extraction, which is closer to the reference answer but strays closer to an ensuing span-specific update concerning explainable AI underpoint of the start precisuliar generation machinery.\n"
+      "#### 3. **Less Likely to Include Irrelevant Information**  \n",
+      "   - **Standard Retrieval**:  \n",
+      "     - Stays tightly focused on XAI’s definition and importance.  \n",
+      "     - The \"Examples of XAI Techniques\" section is relevant but somewhat redundant with the earlier content.  \n",
+      "   - **Relevant Segment Extraction**:  \n",
+      "     - Includes tangential details like \"Future Trends\" and domain examples, which, while interesting, aren’t strictly necessary to answer the query.  \n",
+      "\n",
+      "   **Winner**: **Standard Retrieval** for tighter relevance.  \n",
+      "\n",
+      "### Summary of Reasoning:  \n",
+      "- **Standard Retrieval** wins on all three criteria due to its:  \n",
+      "  1. **Depth and precision** (matches the reference closely and adds granularity).  \n",
+      "  2. **Query-focused structure** (logical flow from definition to importance without digressions).  \n",
+      "  3. **Minimal irrelevance** (avoids tangential examples or speculative trends).  \n",
+      "- **Relevant Segment Extraction** is strong but loses points for slight disorganization and inclusion of less critical details.  \n",
+      "\n",
+      "**Final Verdict**: **Standard Retrieval** is the better response.\n"
      ]
     }
    ],
@@ -880,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -894,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
